# ks

./: .gitignore  config.toml  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: pipeline.yml
blog/: config.toml  default.nix
blog/content/: _index.md
blog/content/2019-04-11-functional-img-rust/: index.md
blog/content/pages/: about.md
blog/templates/: about.html  index.html
content/2019-04-11-functional-img-rust/: index.md
content/pages/: about.md
deploy/scripts/: deploy.sh  plan.sh  tofu.sh  upload.sh
deploy/scripts/shared/: terraform.sh  tofu.sh
deploy/tf/: .terraform.lock.hcl  main.tf  outputs.tf  proivder.tf  variables.tf  versions.tf
notebooks/: 2019-04-11-functional-img-rust-part1.ipynb  README.md  flake.nix  pyproject.toml
pretty-urls/: index.js
sass/: main.scss
templates/: index.html
templates/tags/: list.html  single.html
